crates/agtop-cli/tests/snapshots/config_snapshot__config_about_nf_off.snap
---
source: crates/agtop-cli/tests/config_snapshot.rs
expression: buffer_to_text(&buf)
---
 / Search:
  Appearance                  │About
  Columns                     │────────────────────────────────────────
  ⟳  Refresh                  │
  Clients                     │  Version       0.5.0
  Keybinds                    │  Git SHA       dev
  Data sources                │  Config file   /home/user/.config/agtop/config.toml
  ‹ About ›                   │  Repository    https://github.com/collectiveai-team/rust-agtop
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
 [↑↓] navigate  [Tab] switch pane  [Enter] edit  [/] search  [Esc] back  [?] help
