crates/agtop-cli/tests/snapshots/config_snapshot__config_columns_nf_off.snap
---
source: crates/agtop-cli/tests/config_snapshot.rs
expression: buffer_to_text(&buf)
---
 / Search:
  Appearance                  │Columns
  ‹ Columns ›                 │────────────────────────────────────────
  ⟳  Refresh                  │  Space toggles · J/K reorders · Enter saves
  Clients                     │
  Keybinds                    │▌ [x]  SESSION
  Data sources                │  [x]  AGE
  About                       │  [x]  CLIENT
                              │  [x]  SUB
                              │  [x]  MODEL
                              │  [x]  CPU
                              │  [x]  MEM
                              │  [x]  R/s
                              │  [x]  W/s
                              │  [x]  TOKENS
                              │  [x]  CONTEXT
                              │  [x]  COST$
                              │  [x]  PROJECT
                              │  [x]  NAME
                              │  [ ]  STARTED
                              │  [ ]  LAST ACTIVE
                              │  [ ]  DUR
                              │  [ ]  EFFORT
                              │  [ ]  STATE
                              │  [ ]  PID
                              │  [ ]  VSZ
                              │  [ ]  DISK R
                              │  [ ]  DISK W
                              │  [ ]  OUT
 [↑↓] navigate  [Tab] switch pane  [Enter] edit  [/] search  [Esc] back  [?] help
