crates/agtop-cli/tests/snapshots/config_snapshot__config_data_sources_nf_off.snap
---
source: crates/agtop-cli/tests/config_snapshot.rs
expression: buffer_to_text(&buf)
---
 / Search:
  Appearance                  │Data sources
  Columns                     │────────────────────────────────────────
  ⟳  Refresh                  │
  Clients                     │
  Keybinds                    │
  ‹ Data sources ›            │
  About                       │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
 [↑↓] navigate  [Tab] switch pane  [Enter] edit  [/] search  [Esc] back  [?] help
