crates/agtop-cli/tests/snapshots/config_snapshot__config_keybinds_nf_off.snap
---
source: crates/agtop-cli/tests/config_snapshot.rs
expression: buffer_to_text(&buf)
---
 / Search:
  Appearance                  │Keybinds (read-only)
  Columns                     │────────────────────────────────────────
  ⟳  Refresh                  │
  Clients                     │  d / a / c         Switch view (Dashboard/Aggregation/Config)
  ‹ Keybinds ›                │  q                 Quit
  Data sources                │  ?                 Help overlay
  About                       │  i                 Toggle Info drawer (Dashboard)
                              │  u                 Cycle Usage Quota mode (Dashboard)
                              │  /                 Filter / search
                              │  s / S             Cycle sort key / reverse direction
                              │  g / r             Cycle group-by / time range (Aggregation)
                              │  Enter             Open / drill into selection
                              │  Esc               Close overlay / cancel
                              │  Tab / Shift+Tab   Switch focus / cycle tabs
                              │  1 / 2 / 3 / 4     Switch Info drawer tab
                              │  j / k             Move down / up
                              │  Shift+click       Bypass mouse capture for native text selection
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
 [↑↓] navigate  [Tab] switch pane  [Enter] edit  [/] search  [Esc] back  [?] help
