crates/agtop-cli/tests/snapshots/config_snapshot__config_refresh_nf_off.snap
---
source: crates/agtop-cli/tests/config_snapshot.rs
expression: buffer_to_text(&buf)
---
 / Search:
  Appearance                  │Refresh
  Columns                     │────────────────────────────────────────
  ⟳  ‹ Refresh ›              │
  Clients                     │  Refresh interval (s)  [ 0 ]
  Keybinds                    │  Stalled threshold (s) [ 0 ]  (0 min)
  Data sources                │  Pause on idle         [ ]
  About                       │  Lazy-load on startup  [ ]
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
                              │
 [↑↓] navigate  [Tab] switch pane  [Enter] edit  [/] search  [Esc] back  [?] help
